--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 						</td>
 						<td width="75%">
 							<font size="6">Project Description</font> <br/><br/>
-							<p align="justify"My eagle project is a hydroponics kit that uses the Kratky method. My project will allow seedlings to grow only using water and nutrients placed in a "grow box" until the crop is ready to be harvested.</p> 
+							<p align="justify">My eagle project is a hydroponics kit that uses the Kratky method. My project will allow seedlings to grow only using water and nutrients placed in a "grow box" until the crop is ready to be harvested.</p> 
 							<p align="justify">Enter your text here (paragraph#2)</p> 
 							<p align="justify">Enter your text here (paragraph#3)</p> 
 							<br/><br/>
