--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 						<td width="75%">
 							<font size="6">Project Description</font> <br/><br/>
 							<p align="justify">My eagle project is a hydroponics kit that uses the Kratky method. My project will allow seedlings to grow only using water and nutrients placed in a "grow box" until the crop is ready to be harvested.</p> 
-							<p align="justify">Enter your text here (paragraph#2)</p> 
+							<p align="justify">This will be beneficial because it enables students to develop healthy eating habits with their teachers and peers in a learning environment to hopefully take what they learned home. Science teachers can use these kits to integrate it into their curriculum. This gives students a chance to discover many fields of science such as biology, chemistry, or botany (the study of plants). When you teach students how to grow their own crop, they gain pride and self-confidence to be able to grow, harvest, and eat what is grown.</p> 
 							<p align="justify">Enter your text here (paragraph#3)</p> 
 							<br/><br/>
 							<a href="docs/slides.pdf" target="_blank">SHOW MORE</a>
