--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 							<p align="justify">This will be beneficial because it enables students to develop healthy eating habits with their teachers and peers in a learning environment to hopefully take what they learned home. Science teachers can use these kits to integrate it into their curriculum. This gives students a chance to discover many fields of science such as biology, chemistry, or botany (the study of plants). When you teach students how to grow their own crop, they gain pride and self-confidence to be able to grow, harvest, and eat what is grown.</p> 
 							<p align="justify">Below will be instructions on how to grow and transplant microgreens, mixing the fertilizer for the grow box, and how to set up the PVC stand.</p> 
 							<br/><br/>
-//							<a href="docs/slides.pdf" target="_blank">SHOW MORE</a>
+<!--							<a href="docs/slides.pdf" target="_blank">SHOW MORE</a>  -->
 						</td>
 					</tr>
 				</table>
