--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 					<tr align="center">
 						<td width="25%">
 							<img src="images/micro-green.jpeg" width="50%"/> <br/>
-							<a href="docs/micro-green_instructions.pdf" target="_blank">50VIEW INSTRUCTIONS</a>
+							<a href="docs/micro-green_instructions.pdf" target="_blank">VIEW INSTRUCTIONS</a>
 						</td>
 						<td width="25%">
 							<img src="images/nutrient.jpeg" width="50%"/> <br/>
